--- a/Pipfile
+++ b/Pipfile
@@ -4,10 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "*"
-python-decouple = "*"
+django = "==4.0.3"
+python-decouple = "==3.6"
 
 [dev-packages]
 
 [requires]
-python_version = "3.9"
+python_version = "3.10"
